test terraform code with Snyk SAST via githubaction

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,6 +19,7 @@ permissions:
 
 jobs:
   terraform:
+    name: 'Terraform_run'
     runs-on: ubuntu-latest
   
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
