terraform code to validate by snyk before merge into main branch

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,10 +2,12 @@
 name: Terraform Workflow
 
 on:
+  pull_request:
+    branches:
+      - '**'
   push:
     branches:
       - main 
-  pull_request:
     
   
 env:
@@ -52,7 +54,8 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -out=tfplan
+      run: terraform plan
+      if: github.event_name == 'pull_request'
       
       
 
@@ -69,7 +72,7 @@ jobs:
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && steps.snyk_test.conclusion == 'success'
+      if: github.event_name == 'push'
       run: terraform apply -auto-approve 
       
       
