terraform code to validate by snyk before merge into main branch

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -59,16 +59,14 @@ jobs:
       
       
 
-    - name: Run Snyk to check for security issues
-      id: snyk_test
-      uses: snyk/actions/setup@master
-      with:
-        version: 'v1.617.0'
+    - name: Run Snyk to check configuration files for security issues
+      # Snyk can be used to break the build when it detects security issues.
+      # In this case we want to upload the issues to GitHub Code Scanning
+      continue-on-error: true
+      uses: snyk/actions/iac@master
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      
-      
-   
+    
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
